<resources>
    <string name="app_name">DiceKeys</string>
    <string name="error">Error</string>
    <string name="delete">Delete</string>
    <string name="forget">Forget</string>
    <string name="your_dicekeys">Your DiceKeys</string>

    <string name="seed_solokey">Seed a SoloKey</string>
    <string name="solokey">SoloKey</string>
    <string name="derive_secret">Derive  a Secret</string>
    <string name="secrets">Secrets</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="scan">Scan</string>
    <string name="scan_again">Scan again</string>
    <string name="your_dicekey">Your DiceKey</string>
    <string name="dicekey" translatable="false">DiceKey</string>
    <string name="url_or_comma_separeated_list">URL or comma-separated list of domains</string>
    <string name="maximum_character">Maximum Character Length (8 – 999)</string>
    <string name="maximum_length">Maximum Length (16 – 999)</string>
    <string name="no_limit">no limit</string>

    <string name="complete_the_recipe">Complete the recipe above to see the output</string>
    <string name="enter_dicekey_by_hand">Enter the DiceKey by hand</string>
    <string name="save_the_dicekey">Save the DiceKey</string>
    <string name="dicekey_saved_on_device">DiceKey saved on device</string>
    <string name="save_center_die_notice">Your DiceKey will be stored encrypted and identified by the center die.</string>
    <string name="how_to_unlock">How would you like to unlock the other 24 dice?</string>
    <string name="you_dicekey_is_now_in_encrypted">Your DiceKey is now in encrypted long-term storage and will be available even if you restart the app or your device. You will unlock it the same way you unlock your device.</string>

    <string name="tap_to_show">tap to show dice</string>

    <string name="unlock_with_lock_screen">Use my lock screen unlock options</string>
    <string name="unlock_with_device_credentials">Use only my PIN/Pattern/Password</string>
    <string name="unlock_with_biometrics">Use only my fingerprint or other biometrics*</string>

    <string name="custom_recipe">Custom Recipe</string>

    <string name="assemble_a_dicekey">Assemble a DiceKey</string>
    <string name="load_your_dicekey">Load your DiceKey</string>
    <string name="dicekey_with_center">DiceKey with %1$s in center</string>
    <string name="unlock_dicekey_with_center">Unlock DiceKey with %1$s in center</string>
    <string name="open_dicekey_with_center">Open DiceKey with %1$s in center</string>

    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lock">Lock</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="lock_this_dicekey">Lock this DiceKey</string>
    <string name="forget_this_dicekey">Forget this DiceKey</string>

    <string name="ask_dicekey_delete">Are you sure you want to delete the DiceKey from the device?</string>

    <string name="biometrics_encryption_title">Encrypt your DiceKey</string>
    <string name="biometrics_decryption_title">Decrypt your DiceKey</string>

    <string name="biometrics_encryption_subtitle">Use your biometrics to encrypt your DiceKey and safely store it on your device.</string>
    <string name="biometrics_decryption_subtitle">Use your biometrics to decrypt your DiceKey</string>

    <string name="authenticate_encryption_subtitle">Authenticate to encrypt your DiceKey and safely store it on your device.</string>
    <string name="authenticate_decryption_subtitle">Authenticate to decrypt your DiceKey</string>

    <string name="biometrics_unavailable_message">You have to enable Biometrics (Fingerprint Lock) to use this feature.</string>

    <string name="make_a_backup_of_your_dicekey">Make a backup of your DiceKey by copying it.</string>
    <string name="use_a_stickeys_kit">Use a Stickeys Kit</string>
    <string name="use_a_dicekey_kit">Use a DiceKey Kit</string>
    <string name="construct_your_backup">Construct your Backup</string>
    <string name="recipe_for">Recipe for %s</string>
    <string name="sequence_number">Sequence Number</string>
    <string name="str_multiple_passwords_info">if you need multiple passwords for a single website or service, change the sequence number to create additional password</string>
    <string name="str_save_recipe_in_the_menu">Save recipe in the menu</string>
    <string name="str_remove_recipe_from_menu">Remove recipe from menu</string>
    <string name="copy_password">Copy Password</string>
    <string name="common_password_recipes">Common Password Recipes</string>
    <string name="password_copied">Password copied</string>

    <string name="do_not_close_the_box">Do not close the box before the final step</string>
    <string name="you_did_it">You did it!</string>
    <string name="thats_it">That\'s it!</string>
    <string name="preferences">Preferences</string>
    <string name="privacy">Privacy</string>
    <string name="recipes">Recipes</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="build">Build</string>
    <string name="release_date">Release Date</string>
    <string name="security">Security</string>
    <string name="pref_secure_display">Enable secure display</string>
    <string name="pref_privacy_summary">Disable screenshots &amp; screen preview on recent apps</string>
    <string name="pref_privacy_summary_extra">Do not be tricked taking screenshots or recording images of your DiceKey. Anyone who sees the image of your key can replicate it. Enable this feature only when using sample DiceKeys, such as if recording a demo video or product review.</string>

    <string name="pref_autolock">Automatically lock or erase DiceKeys when the app is in the background for</string>
    <string name="pref_autolock_summary">Automatically lock your DiceKeys when the app is in the background</string>
    <string name="pref_autolock_summary_extra">(If you have saved your DiceKey on this device, you will need to unlock it. If you have not saved it, you will need to re-scan it.)</string>

    <string name="ask_for_permissions">Ask for Permissions to read USB device</string>

    <string name="theres_nothing_more_to_it">There\'s nothing more to it.</string>
    <string name="go_back_to_assemble">Go back to assemble and scan in a real DiceKey.</string>

    <string name="be_sure_to_make_a_backup">Be sure to make a backup soon!</string>
    <string name="when_you_press_the_done">When you press the "Done" button, we\'ll take you to the same screen you\'ll see after scanning your DiceKey from the home screen.</string>

    <string name="not_seeing_your_connected_solokey">Not seeing your connected SoloKey?</string>
    <string name="solokey_help_message">If you are connecting using a cable rather than directly to your device\'s USB port, make sure it is an OTG cable.\n\nIf your device has an OTG setting at Settings > Connected devices > OTG, turn it on.\n\nIf you are using an Android device from before 2019 and it does not contain that setting, make sure it supports OTG.</string>

    <string name="please_connect_a_solokey">Please connect a SoloKey.</string>
    <string name="press_the_button_on_your_security_key_three_times">Press the button on your security key three times.</string>
    <string name="you_have_seconds_to_do_so">You have %s seconds to do so</string>

    <string name="internal_representation_of_the_recipe_used_to_derive_the_seed">Internal representation of the recipe used to derive the seed</string>
    <string name="the_seed_to_be_written_to_the_security_key">The seed to be written to the security key</string>
    <string name="seed_s_sn_s">Seed %s SN# %s</string>

    <string name="internal_representation_of_your_recipe">Internal Representation of your recipe</string>
    <string name="successfully_wrote_to_solokey">Successfully wrote to SoloKey</string>
    <string name="request">Request</string>
    <string name="may_use_your_dicekey">May %s use your DiceKey to create a %s?</string>
    <string name="to_allow_this_action">To allow this action, you\'ll first need to load your DiceKey.</string>

    <string name="s_create">create</string>
    <string name="s_recreate">recreate</string>

    <string name="send_password">Send Password</string>
    <string name="send_secret">Send Secret</string>
    <string name="send_keys">Send Keys</string>
    <string name="send_key">Send Key</string>
    <string name="send_encoded_message">Send Encoded Message</string>
    <string name="approve">Approve</string>
    <string name="cancel">Cancel</string>

    <string name="recipe">Recipe</string>
    <string name="secret_created">Secret created</string>
    <string name="password_created">Password created</string>
    <string name="key_created">Key created</string>
    <string name="message_to_sign">Message to sign</string>
    <string name="message_to_seal">Message to seal</string>


    <string name="reveal_that_the_center_die">Reveal that the center die is %s so that %s can remind you next time</string>
    <string name="will_not_see_your_dicekey">%s will not see your DiceKey.</string>
    <string name="may_use_password">May %s use your DiceKey to %s a password?</string>
    <string name="may_use_secret_code">May %s use your DiceKey to %s a secret code?</string>
    <string name="may_use_keys_encode_decode_secrets">May %s use your DiceKey to %s keys to encode and decode secrets?</string>
    <string name="may_use_key_encode_decode_secrets">May %s use your DiceKey to %s a key to encode and decode secrets?</string>
    <string name="may_use_encode_secret">May %s use your DiceKey to encode a secret?</string>
    <string name="may_use_decode_secret">May %s use your DiceKey to decode a secret?</string>
    <string name="may_use_keys_sign_data">May %s use your DiceKey to %s keys to sign data?</string>
    <string name="may_use_digital_signature">May %s use your DiceKey to add its digital signature to data?</string>
    <string name="may_use_key_verify">May %s use your DiceKey to %s a key used to verify data it has signed?</string>
    <string name="may_use_keys_store_secrets">May %s use your DiceKey to %s keys to store secrets?</string>

    <string name="another_app_made_an_invalid_request">Another app made an invalid request of the DiceKeys app: %s</string>

    <string name="build_in_recipes">Build-in Recipes</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="copied_clipboard">Copied to clipboard</string>

    <string name="paster_or_enter_the_address">Paste or enter the address of the website that will use this %s.</string>
    <string name="enter_a_purpose_for_the">Enter a purpose for the %s.</string>
    <string name="even_the_smallest_change">Even the smallest change to any field changes the entire %s.</string>
    <string name="enter_a_sequence">Each sequence number creates a unique %s.</string>


    <string name="purpose">Purpose</string>
    <string name="web_address">Web Address</string>

    <string name="derive_type_for">%s for %s</string>

    <string name="biometrics_authentication">Biometrics Authentication</string>
    <string name="authenticate_using_biometrics">Authenticate using biometrics</string>

    <string name="user_authentication">User Authentication</string>
    <string name="you_have_to_authenticate_to_unlock_your_device">You have to Authenticate to unlock your device</string>

</resources>
