<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="security_category"
        app:title="@string/security">

        <ListPreference
            app:key="autolock"
            app:title="@string/pref_autolock"
            app:useSimpleSummaryProvider="true"
            app:singleLineTitle="false"
            android:dialogTitle="Lock or erase DiceKeys"
            app:entries="@array/autolock_entries"
            app:entryValues="@array/autolock_values"
            app:defaultValue="60"/>

        <Preference
            app:summary="@string/pref_autolock_summary_extra" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="privacy_category"
        app:title="@string/privacy">

        <SwitchPreferenceCompat
            app:key="secure_display"
            app:title="@string/pref_secure_display"
            app:summary="@string/pref_privacy_summary"
            app:defaultValue="true"/>

        <Preference
            app:summary="@string/pref_privacy_summary_extra" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="recipes_category"
        app:title="@string/recipes">

        <Preference
            app:key="backup"
            android:title="@string/backup"
            app:summary="Backup your recipes into a file"
            />

        <Preference
            app:key="restore"
            android:title="@string/restore"
            app:summary="Restore your recipes from a file"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="about_category"
        app:title="@string/about">

        <Preference
            app:key="version"
            app:title="@string/version"
            app:summary="" />

        <Preference
            app:key="build"
            app:title="@string/build"
            app:summary="" />


    </PreferenceCategory>

</PreferenceScreen>