<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="org.dicekeys.app.viewmodels.AssembleViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            progress="@{vm.page}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_prev"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/previous"
            android:enabled="@{vm.page > 0}"
            app:icon="@drawable/ic_baseline_navigate_before_24"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toTopOf="@id/text_warning"
            app:layout_constraintEnd_toStartOf="@+id/btn_next"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@{vm.page == 6 ? @string/done : @string/next}"
            android:enabled="@{vm.page &lt; 3 || vm.page &gt; 4 || (vm.page == 3 &amp;&amp; vm.diceKey != null) || (vm.page == 4 &amp;&amp; vm.diceKeyBackedUp)}"
            tools:text="@string/next"
            app:icon="@drawable/ic_baseline_navigate_next_24"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toTopOf="@id/text_warning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_prev" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/do_not_close_the_box"
            android:textAllCaps="true"
            android:textAppearance="?attr/textAppearanceCaption"
            android:textColor="@android:color/white"
            tools:visibility="visible"
            isInvisible="@{vm.page == 0 || vm.page >= 5}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            currentItem="@{vm.page}"
            app:layout_constraintBottom_toTopOf="@id/btn_prev"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
